--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,2 +1,3 @@
 @import '~bulma';
 @import "bulma/sass/utilities/_all.sass";
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
